# my-egui-pro

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
docs/plans/: 2025-01-18-favorites-feature-design.md  2025-01-18-gruvbox-theme-design.md  2025-01-18-hacker-news-egui-app-design.md
scripts/: README.md  release.bat  release.sh
src/: app.rs  category.rs  config.rs  hn_api.rs  main.rs  storage.rs  story.rs  theme.rs  ui.rs
