[package]
name = "my_egui_pro"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
opener = "0.8"
time = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
